django_demo1/dev/dev-django-demo1-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: dev-django-demo1-rollouts
spec:
  replicas: 10
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      service: dev-django-demo1-rollouts
  strategy:
    canary:
      maxUnavailable: 1
      # maxSurge: 1
      steps:
        - experiment:
            templates:
            - name: dev-django-demo1-svc-preview
              specRef: canary
              selector:
                matchLabels:
                  service: dev-django-demo1-svc-preview
              metadata:
                labels:
                  service: dev-django-demo1-svc-preview
  
        # - setCanaryScale:
        #     replicas: 1
        - setWeight: 1
        - pause: {}
        - setWeight: 50
        - pause: {}
        
  template:
    metadata:
      labels:
        service: dev-django-demo1-rollouts
      #name: dev-django-demo1-rollouts
    spec:
      containers:
      - name: rollouts-demo
        env: []
        image: gordes317/nginx:1.14.2
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
      imagePullSecrets:
      - name: ksyunregistrykey
      restartPolicy: Always
