django_demo1/dev/django-demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-django-demo1-svc-stable
  namespace: srv-core-st
spec:
  ipFamilies:
  - IPv4
  ports:
  - name: tcp-80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    service: dev-django-demo1-rollouts
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  name: dev-django-demo1-svc-preview
  namespace: srv-core-st
spec:
  ipFamilies:
  - IPv4
  ports:
  - name: tcp-80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    service: dev-django-demo1-svc-preview
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  name: dev-django-demo1-svc-canary
  namespace: srv-core-st
spec:
  ipFamilies:
  - IPv4
  ports:
  - name: tcp-80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    service: dev-django-demo1-rollouts
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
